# JIRA-HEROOOO

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py  ui.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/prompts/: __init__.py  templates.py
app/routes/: process_notes.py
app/services/: __init__.py  jira_client.py  note_parser.py  openai_client.py  task_mapper.py  time_estimator.py  worklog_orchestrator.py
data/: mock_jira_tickets.json
examples/: notes.txt  process_request.json
